Task Management: Made small validation fixes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,5 @@ RECORD_NOT_FOUND=Record not found
 UNEXPECTED_ERROR=An unexpected error occured
 USER_NOT_FOUND=Can not find provided user email
 INVALID_ARGUMENT=Method argument is not valid
+EXPIRED_TOKEN=Provided JWT toke is expired, please authenticate again
+ACCESS_DENIED= You can not access this endpoint with your current Role
