--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ USER_NOT_FOUND=Can not find provided user email
 INVALID_ARGUMENT=Method argument is not valid
 EXPIRED_TOKEN=Provided JWT toke is expired, please authenticate again
 ACCESS_DENIED= You can not access this endpoint with your current Role
+EMAIL_EXISTS= This email already exists, please choose another one
